@@ -6,7 +6,7 @@ CURRENT VERSION:
 	 * Save:	8
 	 * Network:	11
 
-	Android		29
+	Android		30
 	Flash GUI:	2
 	Swing GUI:	2
 	Simple GUI:	1.1.1.1
@@ -21,6 +21,7 @@ CURRENT VERSION:
 	game.ini has ai.wait property that can be changed
 	other game.ini properties work fully now
 
+	Android 30 fixed: do not show old games when re-connect to lobby
 	Android 29 can view hint at any point
 		   annihilate button added to battle dialog
 		   show tooltip at start of go
